@@ -55,6 +55,7 @@
 - added: `F.load()` supports `test`
 - added: NoSQL binary supports `custom` small data attributes
 - added: `@{root}` for getting sub-root path
+- added: CSS and JS supports a simple View Engine markup (config + resources + F.global)
 
 - updated: (IMPORTANT) NoSQL binary divides files to independent directories for 1000 files per directory
 - updated: `GROUP()` by adding a new argument `url_prefix`
